[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = octomachinery
version = attr: octomachinery.utils.versiontools.get_self_version
url = https://octomachinery.dev
project_urls =
    Bug Tracker = https://github.com/sanitizers/octomachinery/issues
    CI: Travis = https://travis-ci.com/sanitizers/octomachinery
    Documentation = https://docs.octomachinery.dev
    Source Code = https://github.com/sanitizers/octomachinery
description = Invisible engine driving octobot machines. Simple, yet powerful.
long_description = file: README.rst
author = Sviatoslav Sydorenko (@webknjaz)
author_email = wk+octomachinery@sydorenko.org.ua
license = GPLv3+
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha

    Environment :: Console
    Environment :: Other Environment
    Environment :: Web Environment

    Framework :: AsyncIO
    Framework :: Robot Framework
    Framework :: Robot Framework :: Library
    Framework :: Robot Framework :: Tool

    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

    Operating System :: OS Independent
    Operating System :: POSIX

    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: HTTP Servers

    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Version Control
    Topic :: Software Development :: Version Control :: Git

    Topic :: System :: Networking

    Topic :: Utilities

    Typing :: Typed
keywords =
    Bot
    Framework
    Framework for writing GitHub Apps
    GitHub
    GitHub Actions
    GitHub API
    GitHub Apps
    GitHub Checks API

[options]
python_requires = >=3.7
package_dir =
    = .
packages = find_namespace:
zip_safe = True
include_package_data = True

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
# NOTE: cryptography is an optional dependency of pyjwt
install_requires =
    aiohttp
    cryptography
    environ-config
    envparse
    gidgethub
    pyjwt
    pyyaml
    setuptools_scm

[options.packages.find]
where = .

[options.extras_require]
docs =
  sphinx
  sphinxcontrib-apidoc
testing =
  pytest
