[bdist_wheel]
# NOTE: "universal = 1" causes `bdist_wheel` to create a wheel that with the
# NOTE: tag "py2.py3" which implies (and tricks pip into thinking) that this
# NOTE: wheel contains Python 2 compatible code. This is not true and conflicts
# NOTE: with the "Requires-Python" field in the metadata that says that we only
# NOTE: support Python 3.6+.
# NOTE: We need to keep it at "0" which will produce wheels tagged with "py3"
# NOTE: when built under Python 3.
# Ref: https://github.com/pypa/packaging.python.org/issues/726
universal = 0

[metadata]
name = octomachinery
version = attr: octomachinery.utils.versiontools.get_self_version
url = https://octomachinery.dev
project_urls =
  Chat: Matrix = https://matrix.to/#/#octomachinery:matrix.org
  Chat: Matrix (PyBA) = https://matrix.to/#/#pyba:matrix.org
  Chat: Matrix (@webknjaz) = https://matrix.to/#/@webknjaz:matrix.org
  CI: GitHub = https://github.com/sanitizers/octomachinery/actions?workflow=Build/Test/Publish
  Docs: RTD = https://docs.octomachinery.dev
  GitHub: issues = https://github.com/sanitizers/octomachinery/issues
  GitHub: repo = https://github.com/sanitizers/octomachinery
description = Invisible engine driving octobot machines. Simple, yet powerful.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sviatoslav Sydorenko (@webknjaz)
author_email = wk+octomachinery@sydorenko.org.ua
license = GPLv3+
license_file = LICENSE
classifiers =
  Development Status :: 2 - Pre-Alpha

  Environment :: Console
  Environment :: Other Environment
  Environment :: Web Environment

  Framework :: AsyncIO

  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators

  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

  Operating System :: OS Independent
  Operating System :: POSIX

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: Implementation
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy

  Topic :: Internet :: WWW/HTTP
  Topic :: Internet :: WWW/HTTP :: HTTP Servers

  Topic :: Software Development
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Libraries :: Application Frameworks
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Software Development :: Version Control
  Topic :: Software Development :: Version Control :: Git

  Topic :: System :: Networking

  Topic :: Utilities

  Typing :: Typed
keywords =
  Bot
  Framework
  Framework for writing GitHub Apps
  GitHub
  GitHub Actions
  GitHub API
  GitHub Apps
  GitHub Checks API

[options]
python_requires = >=3.7
package_dir =
  = .
packages = find_namespace:
zip_safe = True
include_package_data = True

# These are required during `setup.py` run:
setup_requires =
  setuptools_scm >= 1.15.0
  setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
  aiohttp
  anyio < 2.0.0
  click
  cryptography
  environ-config >= 19.1.0
  envparse
  gidgethub >= 4.2.0
  pyjwt[crypto]
  pyyaml
  sentry_sdk
  setuptools_scm

[options.packages.find]
where = .

[options.extras_require]
docs =
  sphinx
  sphinxcontrib-apidoc
  furo
testing =
  pytest
  pytest-aiohttp
  pytest-cov
  pytest-xdist
